@@ -1,7 +1,7 @@
 include $(top_srcdir)/buildutils/config.mk
 
 ACLOCAL_AMFLAGS = -I m4
-SUBDIRS = src doc contrib/blcr
+SUBDIRS = src doc contrib/blcr contrib/init.d
 
 EXTRA_DIST = acinclude.m4 \
   autogen.sh \
