@@ -1,8 +1,8 @@
-#!/bin/sh
+#! /bin/sh
 ### BEGIN INIT INFO
-# Provides:          pbs_server
+# Provides:          pbs_sched
 # Required-Start:    $local_fs
-# Should-Start:
+# Should-Start:      pbs_server
 # Required-Stop:
 # Should-Stop:
 # Default-Start:     2 3 5
@@ -11,16 +11,16 @@
 ### END INIT INFO
 
 # TO INSTALL DO (as root):
-#    cp debian.pbs_server /etc/init.d/pbs_server && update-rc.d pbs_server defaults
+#    cp debian.pbs_sched /etc/init.d/pbs_sched && update-rc.d pbs_sched defaults
 
-DESC="TORQUE server"
-NAME=pbs_server
-DAEMON=/usr/local/sbin/$NAME
+DESC="TORQUE scheduler"
+NAME=pbs_sched
+DAEMON=@sbindir@/$NAME
 PBS_DAEMON=$DAEMON
-PBS_HOME=/var/spool/torque
-PIDFILE=$PBS_HOME/server_priv/server.lock
+PBS_HOME=@PBS_HOME@
+PIDFILE=$PBS_HOME/sched_priv/sched.lock
 SCRIPTNAME=/etc/init.d/$NAME
-export PBS_DAEMON PBS_HOME PIDFILE
+export PBS_DAEMON PIDFILE
 
 # Exit if the package is not installed
 [ -x "$DAEMON" ] || exit 0
