@@ -1,6 +1,6 @@
-#! /bin/sh
+#!/bin/sh
 ### BEGIN INIT INFO
-# Provides:          trqauthd
+# Provides:          pbs_server
 # Required-Start:    $local_fs
 # Should-Start:
 # Required-Stop:
@@ -11,16 +11,16 @@
 ### END INIT INFO
 
 # TO INSTALL DO (as root):
-#    cp debian.trqauthd /etc/init.d/trqauthd && update-rc.d trqauthd defaults
+#    cp debian.pbs_server /etc/init.d/pbs_server && update-rc.d pbs_server defaults
 
-DESC="TORQUE auth daemon"
-NAME=trqauthd
-DAEMON=/usr/local/sbin/$NAME
+DESC="TORQUE server"
+NAME=pbs_server
+DAEMON=@sbindir@/$NAME
 PBS_DAEMON=$DAEMON
-PBS_HOME=/var/spool/torque
-PIDFILE=$PBS_HOME/server_priv/trqauthd.lock
+PBS_HOME=@PBS_HOME@
+PIDFILE=$PBS_HOME/server_priv/server.lock
 SCRIPTNAME=/etc/init.d/$NAME
-export PBS_DAEMON PIDFILE
+export PBS_DAEMON PBS_HOME PIDFILE
 
 # Exit if the package is not installed
 [ -x "$DAEMON" ] || exit 0
@@ -54,10 +54,10 @@ do_stop()
    #   1 if daemon was already stopped
    #   2 if daemon could not be stopped
    #   other if a failure occurred
-   start-stop-daemon --stop --quiet --retry=TERM/1/KILL/5 --pidfile $PIDFILE --name $NAME
+   start-stop-daemon --stop --quiet --retry=TERM/30/KILL/5 --pidfile $PIDFILE --name $NAME
    RETVAL="$?"
    [ "$RETVAL" = 2 ] && return 2
-   start-stop-daemon --stop --quiet --oknodo --retry=0/1/KILL/5 --exec $DAEMON
+   start-stop-daemon --stop --quiet --oknodo --retry=0/30/KILL/5 --exec $DAEMON
    [ "$?" = 2 ] && return 2
    rm -f $PIDFILE
    return "$RETVAL"
