@@ -1,8 +1,8 @@
-#!/bin/sh
+#! /bin/sh
 ### BEGIN INIT INFO
-# Provides:          pbs_mom
+# Provides:          trqauthd
 # Required-Start:    $local_fs
-# Should-Start:      pbs_server pbs_sched
+# Should-Start:
 # Required-Stop:
 # Should-Stop:
 # Default-Start:     2 3 5
@@ -10,20 +10,17 @@
 # Description:       Torque is a versatile batch system for SMPs and clusters
 ### END INIT INFO
 
-# To install do (as root):
-#    cp debian.pbs_mom /etc/init.d/pbs_mom && update-rc.d pbs_mom defaults
+# TO INSTALL DO (as root):
+#    cp debian.trqauthd /etc/init.d/trqauthd && update-rc.d trqauthd defaults
 
-
-DESC="TORQUE mom"
-NAME=pbs_mom
-DAEMON=/usr/local/sbin/$NAME
+DESC="TORQUE auth daemon"
+NAME=trqauthd
+DAEMON=@sbindir@/$NAME
 PBS_DAEMON=$DAEMON
-PBS_HOME=/var/spool/torque
-PIDFILE=$PBS_HOME/mom_priv/mom.lock
+PBS_HOME=@PBS_HOME@
+PIDFILE=$PBS_HOME/server_priv/trqauthd.lock
 SCRIPTNAME=/etc/init.d/$NAME
-export PBS_DAEMON PBS_HOME PIDFILE
-
-ulimit -n 32768
+export PBS_DAEMON PIDFILE
 
 # Exit if the package is not installed
 [ -x "$DAEMON" ] || exit 0
@@ -57,16 +54,13 @@ do_stop()
    #   1 if daemon was already stopped
    #   2 if daemon could not be stopped
    #   other if a failure occurred
-
-   start-stop-daemon --stop --quiet --retry=TERM/30/KILL/5 --pidfile $PIDFILE --name $NAME
+   start-stop-daemon --stop --quiet --retry=TERM/1/KILL/5 --pidfile $PIDFILE --name $NAME
    RETVAL="$?"
    [ "$RETVAL" = 2 ] && return 2
-   sleep 1
-   start-stop-daemon --stop --quiet --oknodo --retry=0/30/KILL/5 --exec $DAEMON
+   start-stop-daemon --stop --quiet --oknodo --retry=0/1/KILL/5 --exec $DAEMON
    [ "$?" = 2 ] && return 2
    rm -f $PIDFILE
    return "$RETVAL"
-
 }
 
 do_reload() {
@@ -99,6 +93,7 @@ case "$1" in
   restart)
      log_daemon_msg "Restarting $DESC" "$NAME"
      do_stop
+     sleep 1
      case "$?" in
        0|1)
         do_start
@@ -119,4 +114,5 @@ case "$1" in
      exit 3
    ;;
 esac
+
 :
