@@ -10,9 +10,9 @@ ulimit -n 32768
 . /etc/rc.d/init.d/functions
 
 # NOTE: customize these variables as needed
-SBIN_PATH=/usr/local/sbin
+SBIN_PATH=@sbindir@
 PBS_DAEMON="$SBIN_PATH/pbs_mom"
-PBS_HOME=/var/spool/torque
+PBS_HOME=@PBS_HOME@
 
 if [ -f /etc/sysconfig/pbs_mom ];then
     . /etc/sysconfig/pbs_mom
