@@ -8,8 +8,8 @@
 # Source the library functions
 . /etc/rc.d/init.d/functions
 
-PBS_DAEMON=/usr/local/sbin/pbs_sched
-PBS_HOME=/var/spool/torque
+PBS_DAEMON=@sbindir@/pbs_sched
+PBS_HOME=@PBS_HOME@
 export PBS_DAEMON PBS_HOME
 
 if [ -f /etc/sysconfig/pbs_sched ];then
