@@ -16,8 +16,8 @@
 #	MOM, on the local host.
 ### END INIT INFO
 
-PBS_DAEMON=/usr/sbin/pbs_mom
-PBS_HOME=/var/spool/torque
+PBS_DAEMON=@sbindir@/pbs_mom
+PBS_HOME=@PBS_HOME@
 PIDFILE=$PBS_HOME/mom_priv/mom.lock
 export PBS_DAEMON PBS_HOME PIDFILE
 
