@@ -1,6 +1,8 @@
 c - crash     b - bug fix    e - enhancement    f - new feature  n - note
 
 4.0.2
+  e - Change so init.d script variables get set based on the configure command.
+      TRQ-789, TRQ-792.
 
 4.0.1
   b - Fix trqauthd init scripts to use correct path to trqauthd.
